# 2018-hardware-miniproject

./: README.md  connected_components.py  countcars.m  docount.m  globplot.py  motdet.m  motdet.py  playmovie.py  setup.cfg  write_file.py
docs/: countlanes.html  docount.html  index.html  motdet.html
